# cpp-project-template

./: CMakeLists.txt  sonar-project.properties
.github/workflows/: build_and_test.yml  codeql.yml
